force-app/main/default/objects/Contact/fields/Authorized_Loge_Card__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Loge_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this checkbox is checked, This person has the right to use a loge card</description>
    <inlineHelpText>If this checkbox is checked, This person has the right to use a loge card</inlineHelpText>
    <label>Authorized Loge Card</label>
    <type>Checkbox</type>
</CustomField>