force-app/main/default/objects/Contact/fields/Company_declarative__c.field-meta.xml
<CustomField>
    <fullName>Company_declarative__c</fullName>
    <label>Company (declarative)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>