force-app/main/default/objects/Contact/fields/Company_or_travel_agency__c.field-meta.xml
<CustomField>
    <fullName>Company_or_travel_agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company or travel agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>