force-app/main/default/objects/Contact/fields/Current_Compagny__c.field-meta.xml
<CustomField>
    <fullName>Current_Compagny__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Guest Account</relationshipLabel>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>