force-app/main/default/objects/Contact/fields/Date_of_e_club_purchase__c.field-meta.xml
<CustomField>
    <fullName>Date_of_e_club_purchase__c</fullName>
    <label>Purchase date</label>
    <type>Date</type>
</CustomField>