force-app/main/default/objects/Contact/fields/DateOfFirstClubPurchase__c.field-meta.xml
<CustomField>
    <fullName>DateOfFirstClubPurchase__c</fullName>
    <label>1st Purchase date</label>
    <type>Date</type>
</CustomField>