force-app/main/default/objects/Contact/fields/Decisional__c.field-meta.xml
<CustomField>
    <fullName>Decisional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decisional</label>
    <type>Checkbox</type>
</CustomField>