force-app/main/default/objects/Contact/fields/Declarative_favorite_hotel__c.field-meta.xml
<CustomField>
    <fullName>Declarative_favorite_hotel__c</fullName>
    <label>Declarative favorite hotel</label>
    <type>TextArea</type>
</CustomField>