force-app/main/default/objects/Contact/fields/Declarative_Favorite_Room_type__c.field-meta.xml
<CustomField>
    <fullName>Declarative_Favorite_Room_type__c</fullName>
    <label>Declarative Favorite Room type</label>
    <type>TextArea</type>
</CustomField>