force-app/main/default/objects/Contact/fields/Declarative_favorites_option_type__c.field-meta.xml
<CustomField>
    <fullName>Declarative_favorites_option_type__c</fullName>
    <label>Declarative favorites option type</label>
    <type>TextArea</type>
</CustomField>