force-app/main/default/objects/Contact/fields/Declarative_favorites_restaurants__c.field-meta.xml
<CustomField>
    <fullName>Declarative_favorites_restaurants__c</fullName>
    <label>Declarative favorites restaurants</label>
    <type>TextArea</type>
</CustomField>