force-app/main/default/objects/Contact/fields/Declarative_passion__c.field-meta.xml
<CustomField>
    <fullName>Declarative_passion__c</fullName>
    <label>Declarative passion</label>
    <type>TextArea</type>
</CustomField>