force-app/main/default/objects/Contact/fields/Declaratives_favorites_cities__c.field-meta.xml
<CustomField>
    <fullName>Declaratives_favorites_cities__c</fullName>
    <label>Declaratives favorites cities</label>
    <type>TextArea</type>
</CustomField>