force-app/main/default/objects/Contact/fields/E_club_card_number__c.field-meta.xml
<CustomField>
    <fullName>E_club_card_number__c</fullName>
    <label>BBH Club n°</label>
    <length>25</length>
    <type>Text</type>
</CustomField>