force-app/main/default/objects/Contact/fields/E_club_Creation_channel__c.field-meta.xml
<CustomField>
    <fullName>E_club_Creation_channel__c</fullName>
    <label>Subscription channel</label>
    <length>25</length>
    <type>Text</type>
</CustomField>