force-app/main/default/objects/Contact/fields/E_club_Expiration_date__c.field-meta.xml
<CustomField>
    <fullName>E_club_Expiration_date__c</fullName>
    <inlineHelpText>Any change will be visible by the customer</inlineHelpText>
    <label>Expiration date</label>
    <type>Date</type>
</CustomField>