force-app/main/default/objects/Contact/fields/E_club_Number_of_points__c.field-meta.xml
<CustomField>
    <fullName>E_club_Number_of_points__c</fullName>
    <description>To manage points, use &quot;Add/Remove points&quot; button</description>
    <inlineHelpText>To manage points, use &quot;Add/Remove points&quot; button</inlineHelpText>
    <label>Cumulative points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>