force-app/main/default/objects/Contact/fields/E_club_subscription__c.field-meta.xml
<CustomField>
    <fullName>E_club_subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BBH Club subscription</label>
    <type>Checkbox</type>
</CustomField>