force-app/main/default/objects/Contact/fields/E_mail_address_2__c.field-meta.xml
<CustomField>
    <fullName>E_mail_address_2__c</fullName>
    <description>Any change will be visible by the customer</description>
    <inlineHelpText>Any change will be visible by the customer</inlineHelpText>
    <label>E-mail address 2</label>
    <type>Email</type>
</CustomField>