force-app/main/default/objects/Contact/fields/Favorite_hotel__c.field-meta.xml
<CustomField>
    <fullName>Favorite_hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Favorite hotel</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>