force-app/main/default/objects/Contact/fields/Favorite_Room_type__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Room_type__c</fullName>
    <label>Favorite Room type</label>
    <type>TextArea</type>
</CustomField>