force-app/main/default/objects/Contact/fields/Favorite_Room_type_Label__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Room_type_Label__c</fullName>
    <label>Favorite Room type Label</label>
    <length>80</length>
    <type>Text</type>
</CustomField>