force-app/main/default/objects/Contact/fields/Favorites_cities__c.field-meta.xml
<CustomField>
    <fullName>Favorites_cities__c</fullName>
    <formula>Favorite_hotel__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Favorites cities</label>
    <type>Text</type>
</CustomField>