force-app/main/default/objects/Contact/fields/Favorites_option_1_Label__c.field-meta.xml
<CustomField>
    <fullName>Favorites_option_1_Label__c</fullName>
    <label>Favorites option 1 Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>