force-app/main/default/objects/Contact/fields/Favorites_option_2__c.field-meta.xml
<CustomField>
    <fullName>Favorites_option_2__c</fullName>
    <inlineHelpText>2nd most option booked</inlineHelpText>
    <label>Favorites option type 2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>