force-app/main/default/objects/Contact/fields/Favorites_option_2_Label__c.field-meta.xml
<CustomField>
    <fullName>Favorites_option_2_Label__c</fullName>
    <label>Favorites option 2 Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>