force-app/main/default/objects/Contact/fields/Favorites_option_3_label__c.field-meta.xml
<CustomField>
    <fullName>Favorites_option_3_label__c</fullName>
    <label>Favorites option 3 Label</label>
    <length>20</length>
    <type>Text</type>
</CustomField>