force-app/main/default/objects/Contact/fields/Favorites_option_type_3__c.field-meta.xml
<CustomField>
    <fullName>Favorites_option_type_3__c</fullName>
    <label>Favorites option type 3</label>
    <length>20</length>
    <type>Text</type>
</CustomField>