force-app/main/default/objects/Contact/fields/Favorites_option_type__c.field-meta.xml
<CustomField>
    <fullName>Favorites_option_type__c</fullName>
    <label>Favorites option type 1</label>
    <type>TextArea</type>
</CustomField>