force-app/main/default/objects/Contact/fields/Favorites_restaurants__c.field-meta.xml
<CustomField>
    <fullName>Favorites_restaurants__c</fullName>
    <label>Favorites restaurants</label>
    <type>TextArea</type>
</CustomField>