force-app/main/default/objects/Contact/fields/Geographical_zone_of_influence__c.field-meta.xml
<CustomField>
    <fullName>Geographical_zone_of_influence__c</fullName>
    <label>Geographical zone of influence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>