force-app/main/default/objects/Contact/fields/Has_a_Web_Account__c.field-meta.xml
<CustomField>
    <fullName>Has_a_Web_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active web account</label>
    <type>Checkbox</type>
</CustomField>