force-app/main/default/objects/Contact/fields/In_charge_of_reservation__c.field-meta.xml
<CustomField>
    <fullName>In_charge_of_reservation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In charge of reservation</label>
    <type>Checkbox</type>
</CustomField>