force-app/main/default/objects/Contact/fields/Influence_Rate__c.field-meta.xml
<CustomField>
    <fullName>Influence_Rate__c</fullName>
    <label>Influence Rate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Influent</fullName>
            </value>
            <value>
                <fullName>Not influent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>