force-app/main/default/objects/Contact/fields/isAllowCarteLoge__c.field-meta.xml
<CustomField>
    <fullName>isAllowCarteLoge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is Allow Carte Loge</description>
    <label>is Allow Carte Loge</label>
    <type>Checkbox</type>
</CustomField>