force-app/main/default/objects/Contact/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FR</fullName>
                <label>French</label>
            </value>
            <value>
                <fullName>EN</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>Italian</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>German</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Catalan</label>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Czech</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Polish</label>
            </value>
            <value>
                <fullName>PT-BR</fullName>
                <label>Brazilian Portuguese</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>