force-app/main/default/objects/Contact/fields/Lastmodifiedby__c.field-meta.xml
<CustomField>
    <fullName>Lastmodifiedby__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lastmodifiedby</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>