force-app/main/default/objects/Contact/fields/Level_e_club_status__c.field-meta.xml
<CustomField>
    <fullName>Level_e_club_status__c</fullName>
    <label>Level e-club status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>