force-app/main/default/objects/Contact/fields/Lifecycle_status__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_status__c</fullName>
    <label>Lifecycle status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Deceleration</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>....</fullName>
                <isActive>false</isActive>
                <label>....</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>