force-app/main/default/objects/Contact/fields/Loyalty_country_code__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_country_code__c</fullName>
    <label>Loyalty country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>