force-app/main/default/objects/Contact/fields/Loyalty_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Subscriptions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loyalty Subscriptions</label>
    <type>Checkbox</type>
</CustomField>