force-app/main/default/objects/Contact/fields/Mobile_Phone_Number_2__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone_Number_2__c</fullName>
    <description>Any change will be visible by the customer</description>
    <inlineHelpText>Any change will be visible by the customer</inlineHelpText>
    <label>Mobile Phone Number 2</label>
    <type>Phone</type>
</CustomField>