force-app/main/default/objects/Contact/fields/National_Card_ID__c.field-meta.xml
<CustomField>
    <fullName>National_Card_ID__c</fullName>
    <label>National Card ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>