force-app/main/default/objects/Contact/fields/Negociation_Domain__c.field-meta.xml
<CustomField>
    <fullName>Negociation_Domain__c</fullName>
    <label>Negociation Scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>National contract</fullName>
            </value>
            <value>
                <fullName>Carte Logée</fullName>
            </value>
            <value>
                <fullName>EClub</fullName>
            </value>
            <value>
                <fullName>Local Contract</fullName>
            </value>
            <value>
                <fullName>Work Council Contract</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>On Time Group</fullName>
            </value>
            <value>
                <fullName>Inter Council Contract</fullName>
            </value>
            <value>
                <fullName>Seminary/Congress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>