force-app/main/default/objects/Contact/fields/Number_of_children__c.field-meta.xml
<CustomField>
    <fullName>Number_of_children__c</fullName>
    <label>Number of children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>