force-app/main/default/objects/Contact/fields/Opt_in__c.field-meta.xml
<CustomField>
    <fullName>Opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opt in</label>
    <type>Checkbox</type>
</CustomField>