force-app/main/default/objects/Contact/fields/Opt_in_B_B__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_B_B__c</fullName>
    <label>Opt-in B&amp;B</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Opt-in</fullName>
            </value>
            <value>
                <fullName>Opt-out</fullName>
            </value>
            <value>
                <fullName>Opt-in SMS</fullName>
            </value>
            <value>
                <fullName>Opt-in Email</fullName>
            </value>
            <value>
                <fullName>Opt-out SMS</fullName>
            </value>
            <value>
                <fullName>Opt-out Email</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
                <isActive>false</isActive>
                <label>Brazil</label>
            </value>
            <value>
                <fullName>Czech Republic</fullName>
                <isActive>false</isActive>
                <label>Czech Republic</label>
            </value>
            <value>
                <fullName>France</fullName>
                <isActive>false</isActive>
                <label>France</label>
            </value>
            <value>
                <fullName>Germany</fullName>
                <isActive>false</isActive>
                <label>Germany</label>
            </value>
            <value>
                <fullName>Italy</fullName>
                <isActive>false</isActive>
                <label>Italy</label>
            </value>
            <value>
                <fullName>Poland</fullName>
                <isActive>false</isActive>
                <label>Poland</label>
            </value>
            <value>
                <fullName>Spain</fullName>
                <isActive>false</isActive>
                <label>Spain</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>