force-app/main/default/objects/Contact/fields/Opt_in_Email__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_Email__c</fullName>
    <formula>IF((INCLUDES(Opt_in_B_B__c , &quot;Opt-in Email&quot;) &amp;&amp; !INCLUDES(Opt_in_B_B__c, &quot;Opt-out Email&quot;)) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opt-in Email</label>
    <type>Checkbox</type>
</CustomField>