force-app/main/default/objects/Contact/fields/Opt_in_SMS__c.field-meta.xml
<CustomField>
    <fullName>Opt_in_SMS__c</fullName>
    <formula>IF((INCLUDES(Opt_in_B_B__c , &quot;Opt-in SMS&quot;) &amp;&amp; !INCLUDES(Opt_in_B_B__c, &quot;Opt-out SMS&quot;)) , True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opt-in SMS</label>
    <type>Checkbox</type>
</CustomField>