force-app/main/default/objects/Contact/fields/OptinB_B_Hotels_partners__c.field-meta.xml
<CustomField>
    <fullName>OptinB_B_Hotels_partners__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptinB&amp;B Hotels partners</label>
    <type>Checkbox</type>
</CustomField>