force-app/main/default/objects/Contact/fields/Optincountry__c.field-meta.xml
<CustomField>
    <fullName>Optincountry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optincountry</label>
    <type>Checkbox</type>
</CustomField>