force-app/main/default/objects/Contact/fields/OptinCredit_card_storage__c.field-meta.xml
<CustomField>
    <fullName>OptinCredit_card_storage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OptinCredit card storage</label>
    <type>Checkbox</type>
</CustomField>