force-app/main/default/objects/Contact/fields/Optingoogle_Calendar__c.field-meta.xml
<CustomField>
    <fullName>Optingoogle_Calendar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optingoogle Calendar</label>
    <type>Checkbox</type>
</CustomField>