force-app/main/default/objects/Contact/fields/Optingroup__c.field-meta.xml
<CustomField>
    <fullName>Optingroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optingroup</label>
    <type>Checkbox</type>
</CustomField>