force-app/main/default/objects/Contact/fields/Other_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_Role__c</fullName>
    <label>Other Contact Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>