force-app/main/default/objects/Contact/fields/Passeport_ID__c.field-meta.xml
<CustomField>
    <fullName>Passeport_ID__c</fullName>
    <label>Passeport ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>