force-app/main/default/objects/Contact/fields/Passions__c.field-meta.xml
<CustomField>
    <fullName>Passions__c</fullName>
    <label>Passions</label>
    <type>TextArea</type>
</CustomField>