force-app/main/default/objects/Contact/fields/Personal_Fiscal_Code__c.field-meta.xml
<CustomField>
    <fullName>Personal_Fiscal_Code__c</fullName>
    <label>Personal Fiscal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>