force-app/main/default/objects/Contact/fields/Subscription_status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_status__c</fullName>
    <label>Subscription status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>