force-app/main/default/objects/Contact/fields/Token_Available__c.field-meta.xml
<CustomField>
    <fullName>Token_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Token available is about the customer who requested the creation of the web account and we are waiting for his confirmation to valid his account</description>
    <label>Token Available</label>
    <type>Checkbox</type>
</CustomField>