force-app/main/default/objects/Contact/fields/Total_nights__c.field-meta.xml
<CustomField>
    <fullName>Total_nights__c</fullName>
    <label>Total nights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>