force-app/main/default/objects/Contact/fields/UniqueActiveEmail__c.field-meta.xml
<CustomField>
    <fullName>UniqueActiveEmail__c</fullName>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>