force-app/main/default/objects/Contact/recordTypes/Contact_Company.recordType-meta.xml
<RecordType>
    <fullName>Contact_Company</fullName>
    <active>true</active>
    <label>Contact Company</label>
</RecordType>