force-app/main/default/objects/Contact/validationRules/VR01_Contact_Phone.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Contact_Phone</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$User.FirstName !=&apos;Technical&apos;, 
OR($User.LastName !=&apos;User&apos;, $User.LastName !=&apos;User2&apos;), 
   !$User.BypassValidationRule__c ,

NOT(REGEX(Phone, &quot;([+]\\d{1,4}\\s[0-9]{1}\\d{1,20})?&quot;))
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Phone number must be in the format + {country code} {phone number} 
example: 06 32 34 45 89 should be written +33 632344589</errorMessage>
</ValidationRule>